# doutorado

./: .gitignore  .gitmodules  CMakeLists.txt
.ipynb_checkpoints/: gradientDescent-checkpoint.ipynb
documentation/00-dissertation/monography/: bibliography.bib  monografia.tex
documentation/00-dissertation/monography/chapters/: 00-approvalSheet.tex  00-catalogRecord.tex  01-dedication.tex  02-specialThanks.tex  03-epigraph.tex  04-abstract.tex  05-abreviations.tex  06-Introduction.tex  07-bibliographicRevision.tex  08-proposedApproach.tex  09-testsAndResults.tex  10-conclusions.tex  11-appendices.tex  preamble.tex  xerographicTerm.tex
documentation/00-dissertation/monography/chapters/data/: date.tex  documentPreamble.tex  faceAndCover.tex  keyWords.tex  packages.tex
documentation/00-dissertation/monography/images/: afasias.tex  autoencoder.tex  autoencoder2.tex  autoencoder3.tex  coletaRuidosa.tex  coletaSilenciosa.tex  denoisingAutoencoder.tex  neuralNetwork.dia  residuo.tex  strategicStructure.tex
documentation/00-dissertation/monography/listings/: LiquidNetwork.py  LiquidTimeConstantNeuron.py  cnnArchitecture.py.tex  hodkinEquation01.py.tex  hodkinEquation02-04.py.tex  hodkinHelperFunctions.py.tex  hodkinHuxleyNeuron.py.tex  membranepotentialdecay.py.tex  membranepotentialfull.py.tex  membranepotentialincrease.py.tex  rcmodel.py.tex  snnArchitecture.py.tex  spikeNeuron.py  surrogate.py.tex
documentation/00-dissertation/monography/tables/: packetWaveletExample.tex  regularWaveletExample.tex  someWaveletsProperties.tex
documentation/00-dissertation/presentation/: apresentacao.tex  preamble.tex
documentation/00-dissertation/presentation/slides/: autoencoders.tex  baseDeDados.tex  contextualiazacao.tex  escalasDeEnergia.tex  estrategiaProposta.tex  estrutura.tex  falaImaginada.tex  interfaceHumanoMaquina.tex  introducao.tex  paraconsistente.tex  prodVozHumana.tex  redesNeuraisDePulso.tex  resnets.tex  revIntroducao.tex  subAmostragem.tex  trabalhosCorrelatos.tex  wavelet.tex
documentation/00-dissertation/stateOfTheArtReview/AnáliseExploratória/bibliografy/: 34677360.bib
documentation/00-dissertation/stateOfTheArtReview/Review/: articlesData.ods
documentation/00-dissertation/stateOfTheArtReview/Review/APPROVED/: Análise exploratória.txt  Primo_BibTeX_Export.bib
documentation/01-researchNotesAndFiles/: notes.rtf
documentation/03-articlesToRead/: Untitled.rtf
documentation/03-articlesToRead/videos/: videosList.txt
notebooks/: InteractiveDerivatives.ipynb  Untitled.ipynb  allTangents.ipynb  gradientDescent.ipynb  simpleNN.ipynb  tests.ipynb
notebooks/.ipynb_checkpoints/: InteractiveDerivatives-checkpoint.ipynb  allTangents-checkpoint.ipynb  simpleNN-checkpoint.ipynb  tests-checkpoint.ipynb
software/: CMakeLists.txt
software/nn/: CMakeLists.txt  CMakePresets.json  Layer.cpp  Linear.cpp  MSELoss.cpp  Model.cpp  Relu.cpp  main.cpp
software/python/: simpleNeuralNet.py
software/signalAquirer/: CMakeLists.txt  imgui.ini
software/signalAquirer/lib/: AudioCapturer.cpp  AudioCapturer.h
software/signalAquirer/lib/capture/: AudioCapturer.cpp  AudioCapturer.h
software/signalAquirer/lib/widgets/: CustomImGuiWindow.cpp  CustomImGuiWindow.h  ImGuiWindow.cpp  ImGuiWindow.h  ScrollPanel.cpp  ScrollPanel.h
software/signalAquirer/src/: Window.cpp  main.cpp  main_old.cpp  teste.cpp
software/src/: main.cpp
software/src/experiments/: experiment00.cpp  experiment00.h  experiment01.cpp  experiment01.h
software/src/lib/gaussian/: gaussian.cpp  gaussian.h
software/test/: CMakeLists.txt
software/test/src/: ScrollPanel.cpp  ScrollPanel.h  ScroolPanel.cpp  ScroolPanel.h  main.cpp
software/widgets/plottingPanel/: CMakeLists.txt
software/widgets/plottingPanel/src/: main.cpp
src/: CMakeLists.txt  main.cpp
src/lib/neuralNetwork/: Config.h  DNN.h  Neuralnet.cpp
src/lib/neuralNetwork/activation/: Activation.cpp  Activation.h
src/lib/neuralNetwork/layer/: Convolutional.cpp  Convolutional.h  Dense.cpp  Dense.h  FullyConnected.cpp  FullyConnected.h  Layer.cpp  Layer.h  Pooling.cpp  Pooling.h
src/lib/neuralNetwork/layers/: Dense.cpp  Dense.hpp
src/lib/neuralNetwork/model/: IModel.h  Sequential.cpp  Sequential.h
src/lib/neuralNetwork/optimizer/: AdamOptimizer.cpp  AdamOptimizer.h  IOptimizer.h  Optimizer.cpp  Optimizer.h
src/lib/neuralNetwork/utils/: Generator.cpp  Generator.h  MaxAverage.cpp  MaxAverage.h  Rng.cpp  Rng.h
src/src/: TODO  main.cpp
src/src/experiments/: experiment00.cpp  experiment01.cpp
src/src/lib/gaussian/: gaussian.h
